[package]
name = "pumpfun_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
sol-trade-sdk = { path = "../sol-trade-sdk" }
solana-sdk = "4"
solana-commitment-config = { version = "3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
dotenvy = "0.15"
openssl = { version = "0.10.73", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true
incremental = false

[profile.release-fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
incremental = true
