[package]
name = "pumpfun_trade_with_safekey"
version = "0.1.0"
edition = "2021"

[dependencies]
sol-trade-sdk = "=4.0.22"
solana-sdk = "3.0.0"
solana-commitment-config = { version = "3.1.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sol-safekey = "=0.1.8"
rpassword = "7.0"
anyhow = "1"
dotenvy = "0.15"
openssl = { version = "0.10.73", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true
incremental = false

[profile.release-fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
incremental = true
